# serializer version: 1
# name: test_collection_attr_functions[field0][id - attr_list]
  list([
    1,
    2,
    3,
  ])
# ---
# name: test_collection_attr_functions[field1][date - attr_list]
  list([
    datetime.date(2020, 5, 16),
    datetime.date(2005, 4, 5),
    datetime.date(2024, 2, 27),
  ])
# ---
# name: test_collection_attr_functions[field2][name - attr_list]
  list([
    'Paul Diaz',
    'Gina Lynch',
    'John Rhodes',
  ])
# ---
# name: test_collection_attr_functions[field3][body - attr_list]
  list([
    'Owner candidate condition which central. Owner support record upon election. Pattern pick camera benefit. Poor health purpose practice.',
    'Summer best manager up. Without hit science onto practice federal. Fight type street.',
    'International music call field door prove. Hit treat garden become a art. Like learn short present store choose deep.',
  ])
# ---
# name: test_collection_attr_functions[field4][distance - attr_list]
  list([
    17.43,
    17.8,
    14.95,
  ])
# ---
# name: test_collection_attr_functions[field4][distance - avg - pretty]
  '16.7'
# ---
# name: test_collection_attr_functions[field4][distance - avg - raw]
  16.726666666666667
# ---
# name: test_collection_attr_functions[field4][distance - max - pretty]
  '17.8'
# ---
# name: test_collection_attr_functions[field4][distance - max - raw]
  17.8
# ---
# name: test_collection_attr_functions[field4][distance - min - pretty]
  '14.9'
# ---
# name: test_collection_attr_functions[field4][distance - min - raw]
  14.95
# ---
# name: test_collection_attr_functions[field4][distance - sum - pretty]
  '50.2'
# ---
# name: test_collection_attr_functions[field4][distance - sum - raw]
  50.18
# ---
# name: test_collection_attr_functions[field5][elevation_gain - attr_list]
  list([
    3268,
    2732,
    2452,
  ])
# ---
# name: test_collection_attr_functions[field5][elevation_gain - avg - pretty]
  '2817'
# ---
# name: test_collection_attr_functions[field5][elevation_gain - avg - raw]
  2817.3333333333335
# ---
# name: test_collection_attr_functions[field5][elevation_gain - max - pretty]
  '3268'
# ---
# name: test_collection_attr_functions[field5][elevation_gain - max - raw]
  3268
# ---
# name: test_collection_attr_functions[field5][elevation_gain - min - pretty]
  '2452'
# ---
# name: test_collection_attr_functions[field5][elevation_gain - min - raw]
  2452
# ---
# name: test_collection_attr_functions[field5][elevation_gain - sum - pretty]
  '8452'
# ---
# name: test_collection_attr_functions[field5][elevation_gain - sum - raw]
  8452
# ---
# name: test_collection_attr_functions[field6][elevation_loss - attr_list]
  list([
    2652,
    3346,
    733,
  ])
# ---
# name: test_collection_attr_functions[field6][elevation_loss - avg - pretty]
  '2244'
# ---
# name: test_collection_attr_functions[field6][elevation_loss - avg - raw]
  2243.6666666666665
# ---
# name: test_collection_attr_functions[field6][elevation_loss - max - pretty]
  '3346'
# ---
# name: test_collection_attr_functions[field6][elevation_loss - max - raw]
  3346
# ---
# name: test_collection_attr_functions[field6][elevation_loss - min - pretty]
  '733'
# ---
# name: test_collection_attr_functions[field6][elevation_loss - min - raw]
  733
# ---
# name: test_collection_attr_functions[field6][elevation_loss - sum - pretty]
  '6731'
# ---
# name: test_collection_attr_functions[field6][elevation_loss - sum - raw]
  6731
# ---
# name: test_collection_attr_functions[field7][duration - attr_list]
  list([
    datetime.timedelta(seconds=13843, microseconds=990515),
    datetime.timedelta(seconds=12506, microseconds=309075),
    datetime.timedelta(seconds=11832, microseconds=211302),
  ])
# ---
# name: test_collection_attr_functions[field7][duration - avg - pretty]
  '03:32'
# ---
# name: test_collection_attr_functions[field7][duration - avg - raw]
  datetime.timedelta(seconds=12727, microseconds=503631)
# ---
# name: test_collection_attr_functions[field7][duration - max - pretty]
  '03:50'
# ---
# name: test_collection_attr_functions[field7][duration - max - raw]
  datetime.timedelta(seconds=13843, microseconds=990515)
# ---
# name: test_collection_attr_functions[field7][duration - min - pretty]
  '03:17'
# ---
# name: test_collection_attr_functions[field7][duration - min - raw]
  datetime.timedelta(seconds=11832, microseconds=211302)
# ---
# name: test_collection_attr_functions[field7][duration - sum - pretty]
  '10:36'
# ---
# name: test_collection_attr_functions[field7][duration - sum - raw]
  datetime.timedelta(seconds=38182, microseconds=510892)
# ---
# name: test_collection_attr_functions[field8][gpx - attr_list]
  list([
    None,
    None,
    None,
  ])
# ---
# name: test_collection_attr_functions[field9][speed - attr_list]
  list([
    4.532832478508993,
    5.123940508555893,
    4.54868154158215,
  ])
# ---
# name: test_collection_attr_functions[field9][speed - avg - pretty]
  '4.74'
# ---
# name: test_collection_attr_functions[field9][speed - avg - raw]
  4.735151509549012
# ---
# name: test_collection_attr_functions[field9][speed - max - pretty]
  '5.12'
# ---
# name: test_collection_attr_functions[field9][speed - max - raw]
  5.123940508555893
# ---
# name: test_collection_attr_functions[field9][speed - min - pretty]
  '4.53'
# ---
# name: test_collection_attr_functions[field9][speed - min - raw]
  4.532832478508993
# ---
# name: test_collection_collection_stats[order_params0][order_param: "date" - footer]
  list([
    '',
    'STATS',
    '3',
    dict({
      'Σ ': '50.2',
      '↑ ': '17.8',
      '↓ ': '14.9',
      '⌀ ': '16.7',
    }),
    dict({
      'Σ ': '8452',
      '↑ ': '3268',
      '↓ ': '2452',
      '⌀ ': '2817',
    }),
    dict({
      'Σ ': '6731',
      '↑ ': '3346',
      '↓ ': '733',
      '⌀ ': '2244',
    }),
    dict({
      'Σ ': '10:36',
      '↑ ': '03:50',
      '↓ ': '03:17',
      '⌀ ': '03:32',
    }),
    dict({
      'Σ ': '-',
      '↑ ': '5.12',
      '↓ ': '4.53',
      '⌀ ': '4.74',
    }),
  ])
# ---
# name: test_collection_collection_stats[order_params0][order_param: "date" - stats]
  list([
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
  ])
# ---
# name: test_collection_collection_stats[order_params1][order_param: "-date" - footer]
  list([
    '',
    'STATS',
    '3',
    dict({
      'Σ ': '50.2',
      '↑ ': '17.8',
      '↓ ': '14.9',
      '⌀ ': '16.7',
    }),
    dict({
      'Σ ': '8452',
      '↑ ': '3268',
      '↓ ': '2452',
      '⌀ ': '2817',
    }),
    dict({
      'Σ ': '6731',
      '↑ ': '3346',
      '↓ ': '733',
      '⌀ ': '2244',
    }),
    dict({
      'Σ ': '10:36',
      '↑ ': '03:50',
      '↓ ': '03:17',
      '⌀ ': '03:32',
    }),
    dict({
      'Σ ': '-',
      '↑ ': '5.12',
      '↓ ': '4.53',
      '⌀ ': '4.74',
    }),
  ])
# ---
# name: test_collection_collection_stats[order_params1][order_param: "-date" - stats]
  list([
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
  ])
# ---
# name: test_collection_collection_stats[order_params2][order_param: "elevation_gain" - footer]
  list([
    '',
    'STATS',
    '3',
    dict({
      'Σ ': '50.2',
      '↑ ': '17.8',
      '↓ ': '14.9',
      '⌀ ': '16.7',
    }),
    dict({
      'Σ ': '8452',
      '↑ ': '3268',
      '↓ ': '2452',
      '⌀ ': '2817',
    }),
    dict({
      'Σ ': '6731',
      '↑ ': '3346',
      '↓ ': '733',
      '⌀ ': '2244',
    }),
    dict({
      'Σ ': '10:36',
      '↑ ': '03:50',
      '↓ ': '03:17',
      '⌀ ': '03:32',
    }),
    dict({
      'Σ ': '-',
      '↑ ': '5.12',
      '↓ ': '4.53',
      '⌀ ': '4.74',
    }),
  ])
# ---
# name: test_collection_collection_stats[order_params2][order_param: "elevation_gain" - stats]
  list([
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
  ])
# ---
# name: test_collection_collection_stats[order_params3][order_param: "-elevation_gain" - footer]
  list([
    '',
    'STATS',
    '3',
    dict({
      'Σ ': '50.2',
      '↑ ': '17.8',
      '↓ ': '14.9',
      '⌀ ': '16.7',
    }),
    dict({
      'Σ ': '8452',
      '↑ ': '3268',
      '↓ ': '2452',
      '⌀ ': '2817',
    }),
    dict({
      'Σ ': '6731',
      '↑ ': '3346',
      '↓ ': '733',
      '⌀ ': '2244',
    }),
    dict({
      'Σ ': '10:36',
      '↑ ': '03:50',
      '↓ ': '03:17',
      '⌀ ': '03:32',
    }),
    dict({
      'Σ ': '-',
      '↑ ': '5.12',
      '↓ ': '4.53',
      '⌀ ': '4.74',
    }),
  ])
# ---
# name: test_collection_collection_stats[order_params3][order_param: "-elevation_gain" - stats]
  list([
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
  ])
# ---
# name: test_collection_get_totals
  list([
    '',
    'STATS',
    '3',
    dict({
      'Σ ': '50.2',
      '↑ ': '17.8',
      '↓ ': '14.9',
      '⌀ ': '16.7',
    }),
    dict({
      'Σ ': '8452',
      '↑ ': '3268',
      '↓ ': '2452',
      '⌀ ': '2817',
    }),
    dict({
      'Σ ': '6731',
      '↑ ': '3346',
      '↓ ': '733',
      '⌀ ': '2244',
    }),
    dict({
      'Σ ': '10:36',
      '↑ ': '03:50',
      '↓ ': '03:17',
      '⌀ ': '03:32',
    }),
    dict({
      'Σ ': '-',
      '↑ ': '5.12',
      '↓ ': '4.53',
      '⌀ ': '4.74',
    }),
  ])
# ---
# name: test_collection_hikes_stats[order_params0][order_param: "date - stats"]
  list([
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
  ])
# ---
# name: test_collection_hikes_stats[order_params0][order_param: "date" - query]
  '''
  SELECT hikes.id AS hikes_id, hikes.date AS hikes_date, hikes.name AS hikes_name, hikes.distance AS hikes_distance, hikes.elevation_gain AS hikes_elevation_gain, hikes.elevation_loss AS hikes_elevation_loss, hikes.duration AS hikes_duration 
  FROM hikes ORDER BY hikes.date
  '''
# ---
# name: test_collection_hikes_stats[order_params1][order_param: "-date - stats"]
  list([
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
  ])
# ---
# name: test_collection_hikes_stats[order_params1][order_param: "-date" - query]
  '''
  SELECT hikes.id AS hikes_id, hikes.date AS hikes_date, hikes.name AS hikes_name, hikes.distance AS hikes_distance, hikes.elevation_gain AS hikes_elevation_gain, hikes.elevation_loss AS hikes_elevation_loss, hikes.duration AS hikes_duration 
  FROM hikes ORDER BY hikes.date DESC
  '''
# ---
# name: test_collection_hikes_stats[order_params2][order_param: "elevation_gain - stats"]
  list([
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
  ])
# ---
# name: test_collection_hikes_stats[order_params2][order_param: "elevation_gain" - query]
  '''
  SELECT hikes.id AS hikes_id, hikes.date AS hikes_date, hikes.name AS hikes_name, hikes.distance AS hikes_distance, hikes.elevation_gain AS hikes_elevation_gain, hikes.elevation_loss AS hikes_elevation_loss, hikes.duration AS hikes_duration 
  FROM hikes ORDER BY hikes.elevation_gain
  '''
# ---
# name: test_collection_hikes_stats[order_params3][order_param: "-elevation_gain - stats"]
  list([
    list([
      '1',
      '2020-05-16',
      'Paul Diaz',
      '17.4',
      '3268',
      '2652',
      '03:50',
      '4.53',
    ]),
    list([
      '2',
      '2005-04-05',
      'Gina Lynch',
      '17.8',
      '2732',
      '3346',
      '03:28',
      '5.12',
    ]),
    list([
      '3',
      '2024-02-27',
      'John Rhodes',
      '14.9',
      '2452',
      '733',
      '03:17',
      '4.55',
    ]),
  ])
# ---
# name: test_collection_hikes_stats[order_params3][order_param: "-elevation_gain" - query]
  '''
  SELECT hikes.id AS hikes_id, hikes.date AS hikes_date, hikes.name AS hikes_name, hikes.distance AS hikes_distance, hikes.elevation_gain AS hikes_elevation_gain, hikes.elevation_loss AS hikes_elevation_loss, hikes.duration AS hikes_duration 
  FROM hikes ORDER BY hikes.elevation_gain DESC
  '''
# ---
